assets/scss/components_user_facing/_herounit_image_with_aside.scss: fix issue with margin gap on container

--- a/meinberlin/assets/scss/components_user_facing/_herounit_image_with_aside.scss
+++ b/meinberlin/assets/scss/components_user_facing/_herounit_image_with_aside.scss
@@ -1,3 +1,7 @@
+.herounit-image-with-aside {
+  margin-top: -40px!important;
+}
+
 .herounit-image-with-aside__title {
   margin-bottom: 0.4em;
   max-width: 300px;
